# otus-cpp-basic-2024-03-usoltsevpetr

./: .clang-format  CMakeLists.txt  README.md  hello_world.cpp  move.h
NavalBattle/: CMakeLists.txt
NavalBattle/menu/: CMakeLists.txt  menu.cpp  menu.h
NavalBattle/menu/test/: CMakeLists.txt  menu_test.cpp
NavalBattle/src/: CMakeLists.txt  game.cpp
NavalBattle/src/gamestate/: gamestate.cpp  gamestate.h
NavalBattle/src/serialize/: serialize.cpp  serialize.h
NavalBattle/src/visualize/: visualize.cpp  visualize.h
hw02/: CMakeLists.txt  README.md  move.cpp
hw03/: CMakeLists.txt  README.md  check_value.cpp  check_value.h  high_scores.cpp  high_scores.h  main.cpp  main.h  random_value.cpp  random_value.h
hw04/: Ball.cpp  Ball.hpp  CMakeLists.txt  Dust.cpp  Dust.hpp  Physics.cpp  Physics.hpp  World.cpp
hw05/: CMakeLists.txt  IStatistics.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Pct.cpp  Pct.h  Std.cpp  Std.h  statistics.cpp
hw06/: CMakeLists.txt  MyContainer.h  MyForvardList.cpp  MyForvardList.h  MyForvardList.hpp  MyList.cpp  MyList.h  MyList.hpp  MyVector.cpp  MyVector.h  MyVector.hpp  main.cpp
hw07/: CMakeLists.txt  Widget.cpp  Widget.h
hw07/tests/: MyForvardList_tests.cpp  MyList_tests.cpp  MyVector_tests.cpp  main.cpp
hw08/: CMakeLists.txt  top_words.cpp
